Fixed code editor overflow bug

--- a/src/components/text-editor/codemirror-overrides.css
+++ b/src/components/text-editor/codemirror-overrides.css
@@ -14,3 +14,6 @@
   height: 100%;
 }
 
+.CodeMirror-scroll {
+  margin-right: 0;
+}
